new proj/src/objects/GE_ES_Risk_Checklist_Item__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval not required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answer Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preapproved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefiltered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Approver_Roles__c</fullName>
        <label>Approver Roles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_CM_Comments__c</fullName>
        <label>CM Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_CheckVersin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Version</label>
        <referenceTo>GE_ES_Checklist_Version__c</referenceTo>
        <relationshipLabel>Risk Checklist Items</relationshipLabel>
        <relationshipName>Risk_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Language__c</fullName>
        <label>Proposed Language</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_DateTimeFormatter__c</fullName>
        <description>DO NOT DELETE.  This field is used to aid the replication of the standard field history related list on Risk Checklist Item</description>
        <label>DateTimeFormatter</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_ES_Deviation_Level__c</fullName>
        <label>Deviation Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1&amp;2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Mitigation_Strategy__c</fullName>
        <label>Mitigation Strategy</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Name__c</fullName>
        <formula>GE_ES_Risk_Factor__r.GE_ES_Risk_Factor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being created as a lookup to opportunity and will take place of the existing master detail relationship to oppty.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Risk Checklist Items (Opportunity)</relationshipLabel>
        <relationshipName>GE_ES_Opportunity1_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Risk Checklist</relationshipLabel>
        <relationshipName>GE_ES_Opportunity_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Pending_Submissions__c</fullName>
        <label>Pending Submissions</label>
        <summaryFilterItems>
            <field>GE_ES_Checklist_Item_Submission__c.GE_ES_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>GE_ES_Checklist_Item_Submission__c.GE_ES_Risk_Checklist_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_ES_RiskFactor_PL_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The P&amp;L specific Riskfactor</description>
        <label>Risk Factor P&amp;L Configuration</label>
        <referenceTo>GE_ES_Risk_Factor_Configuration__c</referenceTo>
        <relationshipLabel>Risk Checklist Items</relationshipLabel>
        <relationshipName>Risk_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor_Deviation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Factor Deviation</label>
        <referenceTo>GE_ES_Risk_Factor_Deviation__c</referenceTo>
        <relationshipLabel>Risk Checklist Items</relationshipLabel>
        <relationshipName>Risk_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Factor</label>
        <referenceTo>GE_ES_Risk_Factor__c</referenceTo>
        <relationshipLabel>Risk Checklist Items</relationshipLabel>
        <relationshipName>Risk_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Submissions__c</fullName>
        <description>Total Number of Submissions</description>
        <label>Submissions</label>
        <summaryForeignKey>GE_ES_Checklist_Item_Submission__c.GE_ES_Risk_Checklist_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_Approver_Comments__c</fullName>
        <description>This field is used to store the comments on the Approval records of the submissions for this checklist item for OG TM</description>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_GS_DealMngt__c</fullName>
        <label>Deal Management</label>
        <referenceTo>GE_ES_Deal_Management__c</referenceTo>
        <relationshipLabel>Risk Checklist Items</relationshipLabel>
        <relationshipName>Risk_Checklist_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>GE_OG_Product_Name__c</fullName>
        <description>This field is used to populate the Product name of the Checklist Item and is used exclusively for OG TM opportunities</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Product_Service__c</fullName>
        <label>Product Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Requestor_Comments__c</fullName>
        <label>Requestor Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Residual_Risk__c</fullName>
        <label>Original Risk</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Risk_HelpText__c</fullName>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Risk_Link__c</fullName>
        <label>Risk Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GE_OG_Risk_Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Risk_Score__c</fullName>
        <description>New field to capture Risk score of O&amp;G Risk Checklist items</description>
        <label>Risk Score</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Score__c</fullName>
        <label>Score</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Site_Scope__c</fullName>
        <label>Site Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Train__c</fullName>
        <description>The train field from the Opportunity line item</description>
        <label>Train</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Weighted_Score__c</fullName>
        <label>Weighted Score</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PW_App_Rev__c</fullName>
        <description>This field is used exclusively for CSA RAMP to store approvers/revieweres</description>
        <label>Approvers/Reviewers</label>
        <picklist>
            <picklistValues>
                <fullName>Comm Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_Approver_Comments__c</fullName>
        <description>This field is used for Risk Module ot capture the comment from the Approver</description>
        <label>Answer Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_PW_PrevContract__c</fullName>
        <description>This field is used for RAMP Risk Module</description>
        <label>PCSC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PW_RAMP_CSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to differentiate the checklist items of RAMP from CSA as they would share the same module Id.</description>
        <label>PW RAMP CSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PW_RAMP_ExecAppDate__c</fullName>
        <label>Exec Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_RAMP_GMAppDate__c</fullName>
        <label>GM Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PW_Risk_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Module</label>
        <referenceTo>GE_PW_Risk_Module__c</referenceTo>
        <relationshipLabel>Risk Checklist Items</relationshipLabel>
        <relationshipName>Risk_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_RF_Name__c</fullName>
        <label>Risk Factor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Lead_PL__c</fullName>
        <formula>GE_ES_Opportunity1__r.Lead_PL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Lead P&amp;L</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Tier_1__c</fullName>
        <formula>GE_OG_GS_DealMngt__r.Oppty_Tier_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Tier 1</label>
        <type>Text</type>
    </fields>
    <label>Risk Checklist Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Item Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>